[tool.poetry]
name = "city-hall-address"
version = "0.1.0"
description = ""
authors = ["Fernando de Moraes Sedrez <fmsedrez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
